# QT_Works

./: README.md
Discogs/: CMakeLists.txt  discogsapi.cpp  discogsapi.h  main.cpp
Fourth/: CMakeLists.txt  main.cpp
Map_support/: CMakeLists.txt  IconButton.qml  Main.qml  Main.qml.autosave  SerachBox.qml  main.cpp  navigation.cpp  navigation.h
QT_charts/: CMakeLists.txt  main.cpp
QT_first/: CMakeLists.txt  Constants.qml  Custom.qml  Main.qml  audio.cpp  audio.h  main.cpp  radio.cpp  radio.h
QmlCanvas/: CMakeLists.txt  Main.qml  main.cpp
Qt_ModelView/: CMakeLists.txt  Main.qml  main.cpp
Qt_componets/: CMakeLists.txt  main.cpp
Qt_custom/: CMakeLists.txt  main.cpp
Qt_menu_application/: CMakeLists.txt  Main.qml  main.cpp
Qt_radio/: CMakeLists.txt  Main.qml  main.cpp  radio.h
canvas/: CMakeLists.txt  CMakeLists.txt.user.4e1d361  main.cpp
first/: Button1.qml  CMakeLists.txt  CMakeLists.txt.user.4e1d361  Listview.qml  Main.qml  Sample.qml  States.qml  clicker.cpp  clicker.h  main.cpp
infortainment/: AudioControl.qml  Bottom.qml  CMakeLists.txt  Left.qml  Main.qml  Right.qml  system.cpp
second/: Animate.qml  Animate1.qml  CMakeLists.txt  CMakeLists.txt.user.4e1d361  Handler.cpp  Handler.h  Signalclass.cpp  Signalclass.h  Slotclass.cpp  Slotclass.h  System.cpp  System.h  main.cpp
third/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h
